k8s/gogs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gogs-service
spec:
  selector:
    app: gogs
  ports:
  - name      : http
    protocol  : TCP
    port      : 3000
    targetPort: 3000
  
  - name      : ssh
    protocol  : TCP
    port      : 2222
    targetPort: 22
